Fix scrollbar gap showing when not needed

--- a/src/components/settings/_sidebar.scss
+++ b/src/components/settings/_sidebar.scss
@@ -22,8 +22,8 @@
             left: 0;
             z-index: 1;
         }
-        div[class^="scroller-"]{
-            overflow-y: auto;
+        .sidebarRegionScroller-3MXcoP{
+            overflow-y: auto !important;
         }
         .sidebar-CFHs9e{
             div[class^="side"] div[class^="header"]{
